--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,10 +14,13 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
     "bootstrap": "^4.0.0-alpha.6",
+    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.0",
     "jquery": "^3.1.1",
+    "node-sass": "^4.3.0",
     "requirejs": "^2.3.2"
   }
 }
