--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-es2015-modules-amd": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
@@ -19,8 +20,10 @@
     "gulp-babel": "^6.1.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.0",
+    "gulp-wrap-amd": "^0.5.0",
     "jquery": "^3.1.1",
     "node-sass": "^4.3.0",
-    "requirejs": "^2.3.2"
+    "requirejs": "^2.3.2",
+    "trumbowyg": "^2.4.2"
   }
 }
