--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
+    "blueimp-file-upload": "^9.14.2",
     "bootstrap": "^4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
